front/static/css/main.scss
html, body, body > .container-fluid, body .row, body main {
    height: calc(100% - 55px);
}

main {
    padding: 1rem;

    ul.list-group {
        padding-bottom: 1rem;
    }

    > .btn-primary, > .card > .card-body > .btn-primary {
        margin-bottom: 1rem;
    }

    form .btn {
        margin-top: 1rem;
        margin-right: 1rem;
    }

    .pagination {
        padding-bottom: 1rem;
    }
}

a, a.btn:hover {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.cloud .badge {
    margin: .5rem;
}

.btn.logout {
    margin: .5rem 0;
}

li.list-group-item {
    --table-striped-color: var(--bs-emphasis-color);
    --table-striped-bg: rgba(var(--bs-emphasis-color-rgb), 0.05);
    --table-hover-color: var(--bs-emphasis-color);
    --table-hover-bg: rgba(var(--bs-emphasis-color-rgb), 0.075);

    &:nth-child(even) {
        color: var(--table-striped-color);
        background-color: var(--table-striped-bg);
    }

    &:hover {
        color: var(--table-hover-color);
        box-shadow: inset 0 0 0 9999px var(--table-hover-bg);
    }

    .error {
        color: var(--bs-red);
    }

    .swipe-element {
        > img, > a {
            margin-right: .5rem;
        }
    }

    .badge {
        font-weight: 400;
        margin-right: .5rem;
        vertical-align: middle;
        font-size: 100%;
    }

    .flex-float-end .actions {
        display: none;
    }

    div.expanded a {
        text-wrap: wrap;
    }

    @media (min-width: 768px) /* md */ {
        &:hover .flex-float-end .actions {
            margin-right: .5rem;
            display: block;
        }
    }

    .medias {
        li {
            overflow: hidden;
            white-space: nowrap;
            text-overflow: ellipsis;
        }

        a {
            color: var(--bs-body-color);

            &:hover {
                text-decoration: none;
            }
        }

        svg:hover {
            color: var(--bs-purple);
        }
    }

    .actions {
        a {
            color: var(--bs-body-color);

            &:hover {
                text-decoration: none;
            }
        }

        .btn {
            margin-right: .5rem;
        }

        .read svg:hover {
            color: var(--bs-primary);
        }

        .favorite svg:hover {
            color: var(--bs-orange);
        }
    }

    .flex-float-end {
        margin-left: auto;
        display: flex;

        &> .favorite {
            display: block;
            color: var(--bs-orange);
            margin-right: .5rem;
        }
    }

    &:hover .flex-float-end > .favorite {
        display: none;
    }
}

.tags .badge {
    font-size: .875rem;
}

.card {
    margin-bottom: 1rem;
}

.help, .medias {
    position: relative;
}

.popover {
    padding: 0;

    .popover-body ul.list-group {
        margin-bottom: 0;
    }
}

.popover:not(:popover-open) {
    display: none;
}

:popover-open {
    inset: unset;
}

.btn.medias {
    color: var(--bs-purple) !important;
    border-color: var(--bs-purple);
}

.sidebar-heading {
    font-size: .75rem;
    text-transform: uppercase;
}

.sidebar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    z-index: 100; /* Behind the navbar */
    padding: 48px 0 0; /* Height of navbar */
    box-shadow: inset -1px 0 0 var(--bs-border-color-translucent);
    background-color: var(--bs-body-bg);

    .nav-link {
        font-weight: 500;
        color: var(--bs-secondary-text-emphasis);

        &:hover {
            text-decoration: underline;
        }
    }

    .nav-item {
        .nav-link.active {
            color: var(--bs-primary);
        }

        .nav-link.active .badge {
            background-color: var(--bs-primary);
        }
    }

    .btn-primary {
        margin-top: 1rem;
        margin-left: 1rem;
    }

    .badge {
        margin-left: .5rem;
    }
}

.sidebar-sticky {
    position: relative;
    top: 0;
    height: calc(100vh - 48px);
    padding-top: .5rem;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

@supports ((position: -webkit-sticky) or (position: sticky)) {
    .sidebar-sticky {
        position: -webkit-sticky;
        position: sticky;
    }
}

.navbar-brand {
    padding-top: .75rem;
    padding-bottom: .75rem;
    font-size: 1rem;
    background-color: rgba(0, 0, 0, .25);
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);

    svg {
        animation: loader 1.5s infinite;
    }
}

@keyframes loader {
    0% {
        rotate: 0deg;
    }

    100% {
        rotate: 360deg;
    }
}

.form-control-dark {
    width: auto;
    background-color: var(--bs-gray-900);
    border-color: var(--bs-gray-700);

    &::placeholder {
        color: rgba(222, 226, 230, 0.75);
    }

    &:focus {
        border-color: transparent;
        box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
    }
}

.tags-input {
    background-color: var(--bs-body-bg);
    display: flex;

    .badge {
        font-size: 1rem;
    }

    input[type="text"] {
        border: 0px;
        flex: 1 1 auto;
    }
}

.autocomplete {
    display: flex;
    flex: 1 1 auto;

    .list-group {
        position: absolute;
        z-index: 99;
        margin-top: 1.5rem;
    }
}

.login {
    display: flex;
    align-items: center;
    text-align: center;
    background-color: var(--bs-body-bg);
    height: 100%;

    form {
        width: 100%;
        max-width: 330px;
        margin: auto;

        .form-control {
            position: relative;
            box-sizing: border-box;
            height: auto;
            padding: 10px;
            font-size: 16px;
        }

        & > div {
            margin-bottom: 10px;
        }
    }
}

.full-page {
    display: flex;
    align-items: center;
    color: var(--bs-secondary-bg);
    height: 100%;
    width: 100%;
    max-width: 512px;
    margin: 55px auto 0 auto;

    svg {
        margin-right: 2rem;

    }

    @media (max-width: 768px ) /* md */ {
        svg {
            max-width: 168px;
        }
    }
}

@mixin scrollbar-hide() {
    -ms-overflow-style: none;
    scrollbar-width: none;

    &::-webkit-scrollbar {
        display: none;
    }
}

.swipe-container {
    overflow: scroll auto;
    scroll-snap-type: x mandatory;
    @include scrollbar-hide();

    .swipe-element {
        scroll-snap-align: start;
        min-width: 100%;
        white-space: nowrap;

        a {
            overflow-x: hidden;
            text-overflow: ellipsis;
        }
    }

    .action {
        min-width: 50%;
        display: flex;
        align-items: center;
        justify-content: center;
        transition: background-color 1s ease;

        svg {
            position: sticky;
        }
    }
}

